@@ -64,6 +64,10 @@ IN DEVELOPMENT
    * Fix traceback when sending large response bodies over the smart protocol
      on Windows. (Andrew Bennetts, #115781)
 
+   * Fix ``urlutils.relative_url`` for the case of two ``file:///`` URLs
+     pointed to different logical drives on Windows.
+     (Alexander Belchenko, #90847)
+
    * pycurl authentication handling was broken and incomplete. Fix handling of
      user:pass embedded in the urls.
      (Vincent Ladeuil, #177643)
